--- a/app/views/contracts/index.html.haml
+++ b/app/views/contracts/index.html.haml
@@ -1,3 +1,6 @@
+.alert.alert-success.alert.alert-dismissable
+  Вы вошли!
+  %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", type: "button"} ×
 %h4.contract_information 
   Данные
 .contacts
