--- a/app/assets/stylesheets/authentucate.css.sass
+++ b/app/assets/stylesheets/authentucate.css.sass
@@ -11,7 +11,7 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05)
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05)
   box-shadow: 0 1px 2px rgba(0,0,0,.05)
-  border: 1px solid #3276b1
+  //border: 1px solid #3276b1
 
 .border-form-div .form-signin-heading, .border-form-div .checkbox
   margin-bottom: 10px
