--- a/app/assets/stylesheets/contracts.css.sass
+++ b/app/assets/stylesheets/contracts.css.sass
@@ -5,7 +5,7 @@ html, body
 section, header, footer
   display: block
 .all
-  background-color: #028ed1
+//background-color: #028ed1
 /*scelet*/    
 .wrapper
   margin-top: 30px
@@ -113,7 +113,27 @@ section, header, footer
                 dispay: block
                 float: left
                 margin: 0px 10px 0px 10px
-                padding: 10px
+                padding: 10px 12px 12px 12px
                 border-radius: 50%
                 border: 2px solid $dark-grey
                 color: $dark-grey
+
+.text-control
+  border: none
+  box-shadow: none
+  border-bottom: 1px dashed $dark-grey
+  font-size: 16px
+                
+  &:focus
+    box-shadow: none
+    border-color: $dark-grey
+
+.form-control
+  border-radius: none
+
+.has-error 
+  .form-control
+    box-shadow: none
+
+//.help-block
+//margin-top: 30px
