--- a/app/views/contracts/status.html.haml
+++ b/app/views/contracts/status.html.haml
@@ -1,8 +1,8 @@
 %h4.contract_information Статус
-= simple_form_for ContractStatusLog.new, url: change_status_contracts_path, method: :post do |f|
-  = f.input :status, collection: [['Активен', 0], ['Приостановлен', 4]], input_html: { class: "form-control" }, selected: current_contract.status
-  = f.input :date1
-  = f.input :date2
+= simple_form_for @status, url: change_status_contracts_path, method: :post, :defaults => { :input_html => { :class => "form-control" } } do |f|
+  = f.input :status, collection: [['Активен', 0], ['Приостановлен', 4]], input_html: { class: "form-control" }, selected: @status.status ||= current_contract.status
+  = f.input :date1, as: :string, input_html: { class: 'date_picker form-control text-control' }
+  = f.input :date2, as: :string, input_html: { class: 'date_picker form-control text-control' }
   = f.button :submit, value: 'Изменить статус', class: 'contact_submit btn btn-primary btn-large', disabled: ![0, 4].include?(current_contract.status)
 %br/
 %br/
