redy for ecconnect deploy testing

--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -10,7 +10,7 @@
         Лимит: 
         %b= current_contract.closesumma
         грн.
-= link_to "Оплатить кредитной картой", "#", class: 'contact_submit btn btn-primary btn-large'
+= link_to "Оплатить кредитной картой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
 %br/
 %br/
 %table.table
