add time to payment dt to lm

--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -28,5 +28,5 @@
         %td 
           = p.comment
         %td 
-          = p.dt.strftime("%d.%m.%Y %H:%M")
+          = p.lm.strftime("%d.%m.%Y %H:%M")
 = will_paginate @payments, renderer: BootstrapPagination::Rails, bootstrap: 3, param_name: 'id'
