--- a/app/views/ecconnect_rails/ecconnect_payments/new.html.haml
+++ b/app/views/ecconnect_rails/ecconnect_payments/new.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @ecconnect_payment, url: ecconnect.ecconnect_payments_path do |f|
   = f.input :amount, input_html: { class: 'form-control' }
-  = f.input :payer_id, as: :hidden, input_html: { class: 'form-control', value: current_contract.id }
+  = f.input :payer_id, as: :hidden, input_html: { value: current_contract.id }
+  = f.input :purchase_desc, as: :hidden, input_html: { value: "Пополнение счета #{current_contract.title}" }
   = f.button :submit, class: 'btn-primary contact_submit'
