--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -2,13 +2,13 @@
 .balance
   .summa
     %div{class: "#{current_contract.balance_days_left > 5 ? 'green' : 'red'}"}
-      На счете:
-      %b= current_contract.balance_summa
-      грн.
-    .limit
-      %div{class: "#{current_contract.balance_days_left > 5 ? 'green' : 'red'}"}
-        Лимит: 
-        %b= current_contract.closesumma
+      - if current_contract.balance_summa < 0
+        Ваш долг:
+        %b= current_contract.balance_summa
+        грн.
+      - else
+        Ваш баланс:
+        %b= current_contract.balance_summa
         грн.
 = link_to "Оплатить кредитной картой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
 %br/
@@ -28,5 +28,5 @@
         %td 
           = p.comment
         %td 
-          = p.lm.strftime("%d.%m.%Y %H:%M")
+          = I18n.l p.lm, format: :long
 = will_paginate @payments, renderer: BootstrapPagination::Rails, bootstrap: 3, param_name: 'id'
