add meta and status date to i18n

--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -1,3 +1,4 @@
+- set_meta_tags title: "#{current_contract.title} баланс", description: "Ваш баланс на текущий момент" , keywords: "Крыминфоком, Инфоком, Infocom, Crimeainfocom, пополнить баланс, статистика, личный кабинет"
 %h4.contract_information Баланс
 .balance
   .summa
