--- a/app/views/contracts/index.html.haml
+++ b/app/views/contracts/index.html.haml
@@ -1,3 +1,4 @@
+- set_meta_tags title: "#{current_contract.title}", description: "Ваша инфомация" , keywords: "Крыминфоком, Инфоком, Infocom, Crimeainfocom, пополнить баланс, статистика, личный кабинет"
 %h4.contract_information 
   Данные
 .contacts
