--- a/app/views/ecconnect_rails/ecconnect_payments/show.html.haml
+++ b/app/views/ecconnect_rails/ecconnect_payments/show.html.haml
@@ -1,3 +1,4 @@
+- set_meta_tags title: "Пополнение счета", description: "Пополнение счета кредитной картой" , keywords: "Крыминфоком, Инфоком, Infocom, Crimeainfocom, пополнить баланс, статистика, личный кабинет"
 = ecconnect_form @ecconnect_payment
 :javascript
   $(function(){
