--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,8 @@
 !!!
 %html
   %head
-    %title CrmPersonalAccount
+    %meta{charset: "utf-8"}
+    = display_meta_tags site: 'ООО Крыминфоком'
     = stylesheet_link_tag  "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
