small design change

--- a/app/assets/stylesheets/contracts.css.sass
+++ b/app/assets/stylesheets/contracts.css.sass
@@ -104,7 +104,7 @@ section, header, footer
                 background-color: #f3f3f3
                 
               label
-                color: darken($dark-grey, 10)
+                /*color: darken($dark-grey, 10)*/
                 font-size: 16px
                 padding: 5px 10px
                 font-weight: 300 
@@ -117,6 +117,8 @@ section, header, footer
                 border-radius: 50%
                 border: 2px solid $dark-grey
                 color: $dark-grey
+                /*color: #3276b1*/
+                /*border: 2px solid #3276b1*/
 
 .text-control
   border: none
