--- a/app/assets/stylesheets/contracts.css.sass
+++ b/app/assets/stylesheets/contracts.css.sass
@@ -13,6 +13,15 @@ section, header, footer
     .row
       .col-lg-3
         .sidebar
+          margin-top: -10px
+          padding: 0
+          h2
+            background-color: #f5f5f5
+            padding: 20px 40px 17px 20px
+            border-bottom: 3px solid #e9e9e9
+            font-weight: 400
+            font-size: 18px
+
           .logo
             img
               margin: 0 auto
@@ -115,8 +124,8 @@ section, header, footer
                 margin: 0px 10px 0px 10px
                 padding: 10px 12px 12px 12px
                 border-radius: 50%
-                border: 2px solid $dark-grey
-                color: $dark-grey
+                border: 2px solid #428bca
+                color: #428bca
                 /*color: #3276b1*/
                 /*border: 2px solid #3276b1*/
 
