--- a/app/views/contracts/payment.html.haml
+++ b/app/views/contracts/payment.html.haml
@@ -1,5 +1,6 @@
 - set_meta_tags title: "#{current_contract.title} баланс", description: "Ваши платежи" , keywords: "Крыминфоком, Инфоком, Infocom, Crimeainfocom, пополнить баланс, статистика, личный кабинет"
 %h4.contract_information История платежей
+= link_to "Оплатить кредитной картой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
 %table.table.table-hover
   %thead
     %tr
