menu items left

--- a/app/assets/stylesheets/contracts.css.sass
+++ b/app/assets/stylesheets/contracts.css.sass
@@ -40,7 +40,7 @@ section, header, footer
                 border-radius: 5px
                 font-weight: 300
                 font-size: 16px
-                text-align: center
+                text-align: left
                 color: darken($dark-grey, 15)
               
                 &:after
