--- a/app/assets/stylesheets/contracts.css.sass
+++ b/app/assets/stylesheets/contracts.css.sass
@@ -58,6 +58,10 @@ section, header, footer
                   line-height: 1           
       .col-lg-9
         .content
+          #payment_send
+            margin-top: 5px
+            input
+              margin-bottom: 10px
           h4.contract_information
             background-color: $light-grey
             padding: 20px 40px 17px 20px
@@ -69,6 +73,12 @@ section, header, footer
             font-size: 16px
             margin: 5px 0
             padding: 20px
+          .monexy_submit
+            width: 100%
+            font-size: 16px
+            margin: 5px 0
+            padding: 20px
+            border-radius: 4px
           #contacts
             margin-left: 7px
             .contact_submit
