--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -11,7 +11,9 @@
         Ваш баланс:
         %b= current_contract.balance_summa
         грн.
+%h4.contract_information Способы оплаты
 = link_to "Оплатить платежной карточкой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
+= link_to "MoneXy", monexyes_path, class: 'contact_submit btn btn-primary btn-large'
 %h4.contract_information Баланс за период
 %table.table.table-hover
   %thead
