--- a/app/views/contracts/status.html.haml
+++ b/app/views/contracts/status.html.haml
@@ -27,6 +27,6 @@
         %td 
           = I18n.l(p.date2, format: :default) if p.date2
         %td
-          - @status_actives.each do |c|
+          - @statuslogs.each do |c|
             = I18n.l(c.date, format: :long) if p.date1.eql?(c.date1)
 = will_paginate @statuses, renderer: BootstrapPagination::Rails, bootstrap: 3, param_name: 'id'
