change email title send

--- a/app/views/payment_mailer/upc_added.html.haml
+++ b/app/views/payment_mailer/upc_added.html.haml
@@ -1,5 +1,5 @@
 %link{href: "http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", rel: "stylesheet", type: "text/css"}/
-%h4 Поступила оплата по договору с использованием платежной карты (система UPC).
+%h4 Оплата Эквайринг-Аваль.
 %table.table.table-bordered
   %thead
     %tr
