--- a/app/views/contracts/balance.html.haml
+++ b/app/views/contracts/balance.html.haml
@@ -6,13 +6,13 @@
       - if current_contract.balance_summa < 0
         Ваш долг:
         %b= current_contract.balance_summa.abs
-        грн.
+        руб.
       - else
         Ваш баланс:
         %b= current_contract.balance_summa
-        грн.
+        руб.
 %h4.contract_information Способы оплаты
-= link_to "Оплатить платежной карточкой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
+= #link_to "Оплатить платежной карточкой", ecconnect.new_ecconnect_payment_path, class: 'contact_submit btn btn-primary btn-large'
 %h4.contract_information Баланс за период
 %table.table.table-hover
   %thead
